# life_scheduler

./: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
migrations/: env.py
migrations/versions/: 0863b14bcffb_task_template_id_nullable.py  5d4f705a08c9_init.py
src/: settings.py
src/application/common/: base.py  commands.py  events.py  exceptions.py  notifiers.py  repositories.py  unit_of_work.py
src/application/llm/: assistant_service.py  base.py  chat_client.py  dispatcher.py  models.py  prompt_builder.py  repositories.py
src/application/task_instance/: commands.py  event_handlers.py  events.py  exceptions.py  formatters.py  queries.py  schemas.py  tools.py
src/application/task_template/: commands.py  exceptions.py  queries.py  schemas.py  tools.py  trigger_mapper.py
src/application/user/: commands.py  exceptions.py  queries.py  tools.py
src/composition/: container.py  providers.py  utils.py
src/entrypoints/: bot.py  generate_reminders.py  generate_tasks.py  miss_overdue_tasks.py  outbox.py  scheduler.py
src/infrastructure/: logging.py  notifiers.py
tests/: conftest.py  test_composition.py
tests/factories/: task_instance.py  task_template.py  trigger.py  user.py
tests/test_domain/: test_task_instance.py  test_task_template.py  test_user.py
tests/test_infrastructure/: test_memory_task_instance_repository.py  test_memory_task_template_repository.py  test_memory_user_repository.py  test_notifiers.py
tests/test_presentation/: test_handlers.py  test_parsers.py  test_renderers.py
(+86 files in other folders)
