[project]
name = "life_scheduler"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "black>=26.3.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.5",
    "time-machine[dateutil]>=3.2.0",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.pyright]
extraPaths = ["src"]
reportUnusedVariable = "none"
reportUnboundVariable = "none"
