[project]
name = "life_scheduler"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.28.2",
    "aiohttp-socks>=0.11.0",
    "alembic>=1.18.5",
    "apscheduler>=3.11.3",
    "asyncpg>=0.31.0",
    "dishka>=1.10.1",
    "openai>=2.44.0",
    "pg8000>=1.31.5",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[asyncio]>=2.0.50",
    "testcontainers>=4.14.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "black>=26.3.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.5",
    "time-machine[dateutil]>=3.2.0",
    "ruff>=0.15.14",
    "factory-boy>=3.3.3",
    "isort>=8.0.1",
    "pytest-cov>=7.1.0",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.pyright]
extraPaths = ["src"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_empty = true
